Fixes 1. #91: update prices for tickets 2. #82: remove word FREE on the second step of the form on not "freeticket" versions 3. #89: add margin to the "pick numbers" button on mobile picker

--- a/src/scss/components/NumberPicker/NumberPickerMobile.scss
+++ b/src/scss/components/NumberPicker/NumberPickerMobile.scss
@@ -30,6 +30,7 @@
 }
 
 .picker-mob_pick-btn {
+	margin-left: 3px;
   cursor: pointer;
   background: none;
   border: none;
